--- a/jupyter_notebooks/rasterio_quickstart.ipynb
+++ b/jupyter_notebooks/rasterio_quickstart.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This document explains how to use Rasterio to read existing files and to create new files.\n",
+    "# This document explains how to use Rasterio to read spatial data files.\n",
     "More detailed example can be found [rasterio docs](https://rasterio.readthedocs.io/en/latest/quickstart.html#python-quickstart)."
    ]
   },
