--- a/jupyter_notebooks/rasterio_quickstart.ipynb
+++ b/jupyter_notebooks/rasterio_quickstart.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# This document explains how to use Rasterio to read spatial data files.\n",
-    "More detailed example can be found [rasterio docs](https://rasterio.readthedocs.io/en/latest/quickstart.html#python-quickstart)."
+    "More detailed example can be found in [rasterio docs](https://rasterio.readthedocs.io/en/latest/quickstart.html#python-quickstart)."
    ]
   },
   {
